--- a/MediChain/MediChain.csproj
+++ b/MediChain/MediChain.csproj
@@ -71,14 +71,30 @@
     <Content Include="App_Data\MediChainDB_log.ldf">
       <DependentUpon>MediChainDB.mdf</DependentUpon>
     </Content>
+    <Content Include="Warehouse.aspx" />
     <Content Include="Global.asax" />
+    <Content Include="SignupBuyer.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Warehouse.aspx.cs">
+      <DependentUpon>Warehouse.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Warehouse.aspx.designer.cs">
+      <DependentUpon>Warehouse.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SignupBuyer.aspx.cs">
+      <DependentUpon>SignupBuyer.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="SignupBuyer.aspx.designer.cs">
+      <DependentUpon>SignupBuyer.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
