--- a/MediChain/Web.config
+++ b/MediChain/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=169433
@@ -15,7 +15,9 @@
     </compilers>
   </system.codedom>
 	<connectionStrings>
-		<add name="MediChainConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\jeetw\source\repos\MediChain\MediChain\App_Data\MediChainDB.mdf;Integrated Security=True"/>
-	</connectionStrings>
+  <add name="MediChainConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\jeetw\source\repos\MediChain\MediChain\App_Data\MediChainDB.mdf;Integrated Security=True" />
+  <add name="ConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\MediChainDB.mdf;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
+ </connectionStrings>
 
 </configuration>
