Added Logout Front, Fix Pages, Label Messages

--- a/MediChain/Web.config
+++ b/MediChain/Web.config
@@ -15,7 +15,7 @@
     </compilers>
   </system.codedom>
 	<connectionStrings>
-  <add name="MediChainConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\jeetw\source\repos\MediChain\MediChain\App_Data\MediChainDB.mdf;Integrated Security=True" />
+  <add name="MediChainConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\jeetw\source\repos\MediChain\MediChain\App_Data\MediChainDB.mdf;Integrated Security=True;Integrated Security=True" />
   <add name="ConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\MediChainDB.mdf;Integrated Security=True"
    providerName="System.Data.SqlClient" />
  </connectionStrings>
