--- a/MediChain/MediChain.csproj
+++ b/MediChain/MediChain.csproj
@@ -75,6 +75,7 @@
     <Content Include="Dealer.aspx" />
     <Content Include="LiveOrders.aspx" />
     <Content Include="Login.aspx" />
+    <Content Include="Products.aspx" />
     <Content Include="SignUp.aspx" />
     <Content Include="Warehouse.aspx" />
     <Content Include="Global.asax" />
@@ -108,6 +109,13 @@
     </Compile>
     <Compile Include="Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Products.aspx.cs">
+      <DependentUpon>Products.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Products.aspx.designer.cs">
+      <DependentUpon>Products.aspx</DependentUpon>
     </Compile>
     <Compile Include="SignUp.aspx.cs">
       <DependentUpon>SignUp.aspx</DependentUpon>
