--- a/MediChain/MediChain.csproj
+++ b/MediChain/MediChain.csproj
@@ -75,6 +75,7 @@
     <Content Include="Dealer.aspx" />
     <Content Include="LiveOrders.aspx" />
     <Content Include="Login.aspx" />
+    <Content Include="MyOrders.aspx" />
     <Content Include="Products.aspx" />
     <Content Include="SignUp.aspx" />
     <Content Include="Warehouse.aspx" />
@@ -109,6 +110,13 @@
     </Compile>
     <Compile Include="Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="MyOrders.aspx.cs">
+      <DependentUpon>MyOrders.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MyOrders.aspx.designer.cs">
+      <DependentUpon>MyOrders.aspx</DependentUpon>
     </Compile>
     <Compile Include="Products.aspx.cs">
       <DependentUpon>Products.aspx</DependentUpon>
