--- a/MediChain/MediChain.csproj
+++ b/MediChain/MediChain.csproj
@@ -75,6 +75,7 @@
     <Content Include="Dealer.aspx" />
     <Content Include="LiveOrders.aspx" />
     <Content Include="Login.aspx" />
+    <Content Include="Logout.aspx" />
     <Content Include="MyOrders.aspx" />
     <Content Include="Products.aspx" />
     <Content Include="SignUp.aspx" />
@@ -110,6 +111,13 @@
     </Compile>
     <Compile Include="Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Logout.aspx.cs">
+      <DependentUpon>Logout.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Logout.aspx.designer.cs">
+      <DependentUpon>Logout.aspx</DependentUpon>
     </Compile>
     <Compile Include="MyOrders.aspx.cs">
       <DependentUpon>MyOrders.aspx</DependentUpon>
